# pymi-cookiecutter

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  _redirects  index.html  justfile  package-lock.json  package.json  pyproject.toml  slides.md
.github/workflows/: deploy.yaml  deploy.yml
assets/: DrawingControls.b40a3de2.js  DrawingControls.vue_vue_type_script_setup_true_lang.c074d1e8.js  DrawingLayer.05c16e03.js  DrawingPreview.6aacb13b.js  Presenter.0e2056ec.js  index.05dd4c6f.js  index.78a7700e.css
pages/: 1.md  2.md  3.md  4.md
sample-cookiecutter/: cookiecutter.json
sample-cookiecutter/hooks/: post_gen_project.py
sample-cookiecutter/{{ cookiecutter.__repo_name }}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
