[project]
name = ""
version = ""
description = ""
authors = [
    {name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com"},
]
dependencies = [
    "cookiecutter>=2.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.4.2"
tag_format = "$version"
update_changelog_on_bump = true
annotated_tag = true
gpg_sign = true
