[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "{{ cookiecutter.package_name }}"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
description = ""
license = {text = "{{ cookiecutter.license }}"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">={{ cookiecutter.__py_major_minor }}"

[tool.pdm]
version = {source = "file", path = "src/{{ cookiecutter.package_name }}/__init__.py"}

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
source-includes = ["tests", "CHANGELOG.md", "LICENSE", "README.md"]

[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]
{% if cookiecutter.has_documentation == 'yes' %}

docs = [
    "sphinx>=4.4.0",
    "numpydoc>=1.2",
]

{% endif %}
{% if cookiecutter.use_jupyter == 'yes' %}
ide = [
    "jupyter>=1.0.0",
]

{% endif %}
[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"

[tool.pyright]
include = ["src"]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
